--- a/index.html
+++ b/index.html
@@ -2612,7 +2612,7 @@ to use  mathematics to solve real problems elegantly. Reference books: </span></
   <tbody>
   <tr>
     <td width="557" height="91" align="left">
-      <p class="WordSection1">1. Two papers accepted to ICML 2024! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of NeurIPS 2024! </p></td>
+      <p class="WordSection1">1. Two papers accepted to ICML 2024! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of CVPR 2025! </p></td>
     <td width="168" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="166" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="166" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -2836,7 +2836,9 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 [<a href="https://zhouchenlin.github.io/Publications/Learning-BasedPDE-Sanya.pdf">pdf</a>]</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">173. Yiming Dong, Huan Lim and Zhouchen Lin, <em>Convergence Rate Analysis of LION</em>, submitted to Neural Networks.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">174. Xin Xu and <u>Zhouchen Lin</u>, <em>Learning Nonseparable Sparse Regularizers via Multivariate Activation Functions</em>, submitted to Neurocomputing.</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">173. Yiming Dong, Huan Lim and <u>Zhouchen Lin</u>, <em>Convergence Rate Analysis of LION</em>, submitted to Neural Networks.</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">172. Zhixiong Huang, Feihao Lei, Yucun Zhong, Yiming Yang, Shiting Wen, Binbin Zhou, Cong Fang, and <u>Zhouchen Lin</u>, <em>Policy Representation via Diffusion Probability  Model for Reinforcement Learning</em>, submitted to Nature Machine Intelligence.</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3544,7 +3546,7 @@ Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">170. 3 papers submitted to AAAI 2024 and 1 paper submitted to KDD 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">169. </span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">10 papers submitted to NeurIPS 2024.</span></p>
-<p>168. Xin Xu and Zhouchen Lin*, MixCon: A Hybrid Architecture for Efficient and Adaptive Sequence Modeling, ECAI 2024. [<a href="Publications/2024-ECAI-MixCon.pdf">pdf</a>]</p>
+<p>168. Xin Xu and Zhouchen Lin*, MixCon: A Hybrid Architecture for Efficient and Adaptive Sequence Modeling, ECAI 2024. [<a href="Publications/2024-ECAI-MixCon.pdf">pdf</a>][<a href="MixCon.zip">code</a>]</p>
 <p>167. Yiming Dong and Zhouchen Lin*, Reducing Memory Footprint in Deep Network Training by Gradient Space Reutilization, PRCV 2024. [<a href="Publications/2024-PRCV-Memory.pdf">pdf</a>]</p>
 <p></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. Yang Chen, Cong Fang*, <u>Zhouchen Lin*</u>, and Bing Liu, <em>Relational Learning in Pre-Trained Models: A Theory from Hypergraph Recovery Perspective</em>, ICML 2024. [<a href="Publications/2024-ICML-Relation.pdf">pdf</a>]</span></p>
@@ -4401,52 +4403,41 @@ International Association of Pattern Recognition (IAPR), grade 2017. </p>
 </span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Associate  Editor of 
 </span>International Journal of Computer Vision (2012-).</p>
 <p>8. Associate Editor of Optimization Methods and Software (2020-).</p>
-<p>9. Executive Editor of Big Data and Information Analytics (2016-).</p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">10. Associate  
+<p>9. Associate Editor of 自动化学报（2024—）。</p>
+<p>10. Executive Editor of Big Data and Information Analytics (2016-).</p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">11. Associate  
 Editor of Neurocomputing (2012-2014).     
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">11. Chairman 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">12. Chairman 
 of Machine Vision Professional Committee, China Society of Images and 
-Graphics (evaluated &quot;excellent&quot; in 2018, 2019,  2021, and 2022).</span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">12. 
+Graphics (evaluated &quot;excellent&quot; in 2018, 2019,  2021,  2022, and 2023).</span></p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">13. 
 Vice-Chairman of Pattern Recognition and Machine Intelligence Professional 
 Committee, China Association of Automation.</span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">13. Standing 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">14. Standing 
 Member of Computer Vision Professional Committee, China Computer Federation. 
 </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">14. Standing 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">15. Standing 
 Member of Pattern Recognition Professional Committee, China Association of Artificial Intelligence. </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">15. </span>Ex-Vice President of Samsung Research, leading the AI Lab at Samsung Research China - Beijing. </p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">16. Adjunct 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">16. </span>Ex-Vice President of Samsung Research, leading the AI Lab at Samsung Research China - Beijing. </p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">17. Adjunct 
   Professor of Chinese University of Hong Kong (Shenzhen).</span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">17. Ex-Chair  
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">18. Ex-Chair  
   Professor of Northeast Normal University.     
     <o:p></o:p> </span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">18. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. Ex-Guest
  Professor of Shanghai Jiaotong University.   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">20. Ex-Guest
  Researcher of Institute of Computing Technologies, Chinese Academy of Sciences. 
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">20. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">21. Ex-Guest
  Professor of Southeast University.   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">21. Ex-Guest
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">22. Ex-Guest
  Professor and Ph.D. Supervisor of Beijing Jiaotong University.   
     <o:p></o:p></span></p>
-<p>22. Technical Advisory Board of Guangdong Key Lab. of Machine Vision and 
-Virtual Reality. </p>
-<p>23.  Technical Advisory Board of Key Lab. of Machine Vision and Pattern 
-Recognition,  Institute of Advanced Technology, Chinese Academy of Sciences, 
-Shenzhen.</p>
-<p>24. Senior Consultant of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
-<p>25. Technical Advisory Board of AI School, Nanjing University of Aeronautics and Astronautics.</p>
-<p>26. Technical Advisory Board of 广东省大数据计算基础理论与方法重点实验室。 </p>
-<p>27. Technical Advisory Board of 东南大学新一代人工智能技术与交叉应用教育部重点实验室。 </p>
-<p>28. Technical Advisory Board of 南开大学数据与智能系统安全教育部重点实验室。 </p>
-<p>29. Chairman of the Technical Advisory Board of 数字福建大数据基础技术研究院福建省大数据分析与处理工程研究中心。 </p>
-<p>30. 国家天元数学西北中心2021主题活动年专家委员会委员。中心  2021年活动主题为“最优化方法与人工智能”。</p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">31. Reviewer/Editor 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">34. Reviewer/Editor 
   to Journals:    
     <o:p></o:p>
 </span></p>
@@ -4465,10 +4456,10 @@ Shenzhen.</p>
   Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">) [Science in China
     (Series E)] 
   <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">32. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">35. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">ICLR 2025 (<strong>Area Chair</strong>), SigAI China Forum at TURC 2024 (<strong>General Chair</strong>), NeurIPS 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">CVPR 2025 (<strong><strong>Senior </strong>Area Chair</strong>), ICLR 2025 (<strong>Area Chair</strong>), SigAI China Forum at TURC 2024 (<strong>General Chair</strong>), NeurIPS 
 2024 (<strong>Senior Area Chair</strong>), ICML 2024 (<strong>Senior Area Chair</strong>), PRCV 2024 
 (<strong>Program Co-Chair</strong>), ICLR 2024 (<strong>Senior Area Chair</strong>), 第十九届中国图象图形学学会青年科学家会议（<strong>General Co-Chair）</strong>，NeurIPS 
 2023 (<strong>Senior Area Chair</strong>), ECAI 2023 (<strong>Area Chair</strong>), ICCV 2023 (<strong>Area Chair</strong>), ICLR 2023 (<strong>Area Chair</strong>), AAAI 2023, CVPR 2023 (<strong>Senior Area Chair</strong>), CVPR 2022 (<strong>Award Committee</strong>), NeurIPS 
@@ -4510,7 +4501,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Recognition 2004, Eurographics 2002, Asian Conf. Computer Vision 2002, Int’l
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, ICCV 2001, Pacific Graphics 2001 
  <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">33. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">36. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Senior Member, AAAI Senior Member (only 5 approved in 2023), CCF/CAA/CAAI Distinguished Member
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
@@ -4902,7 +4893,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Sept. 12, 2024. Number of visitors since March 1, 2010:     
+was last updated on Sept. 25, 2024. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
