--- a/index.html
+++ b/index.html
@@ -2612,7 +2612,7 @@ to use  mathematics to solve real problems elegantly. Reference books: </span></
   <tbody>
   <tr>
     <td width="557" height="91" align="left">
-      <p class="WordSection1">1. Two papers accepted to ICML 2024! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of CVPR 2025! </p></td>
+      <p class="WordSection1">1. One paper accepted to NeurIPS 2024! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of CVPR 2025! </p></td>
     <td width="168" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="166" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="166" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -3543,11 +3543,13 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">171. 14 papers submitted to ICLR 2025.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">170. 3 papers submitted to AAAI 2024 and 1 paper submitted to KDD 2024.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">169. </span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">10 papers submitted to NeurIPS 2024.</span></p>
-<p>168. Xin Xu and Zhouchen Lin*, MixCon: A Hybrid Architecture for Efficient and Adaptive Sequence Modeling, ECAI 2024. [<a href="Publications/2024-ECAI-MixCon.pdf">pdf</a>][<a href="MixCon.zip">code</a>]</p>
-<p>167. Yiming Dong and Zhouchen Lin*, Reducing Memory Footprint in Deep Network Training by Gradient Space Reutilization, PRCV 2024. [<a href="Publications/2024-PRCV-Memory.pdf">pdf</a>]</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">169. Zhoutong Wu, Yimu Zhang, Cong Fang*, and <u>Zhouchen Lin</u>*, <em>Separation and Bias of Deep Equilibrium Models on Expressivity and Learning Dynamics</em>, NeurIPS 2024. [<a href="Publications/2024-NeurIPS-DEQ.pdf">pdf</a>]</span></p>
+<p>168. Xin Xu and <u>Zhouchen Lin</u>*, <em>MixCon: A Hybrid Architecture for Efficient and Adaptive Sequence Modeling</em>, ECAI 2024. [<a href="Publications/2024-ECAI-MixCon.pdf">pdf</a>][<a href="MixCon.zip">code</a>]</p>
+<p>167. Yiming Dong and <u>Zhouchen Lin</u>*, <em>Reducing Memory Footprint in Deep Network Training by Gradient Space Reutilization</em>, PRCV 2024. [<a href="Publications/2024-PRCV-Memory.pdf">pdf</a>]</p>
 <p></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">166. Yang Chen, Cong Fang*, <u>Zhouchen Lin*</u>, and Bing Liu, <em>Relational Learning in Pre-Trained Models: A Theory from Hypergraph Recovery Perspective</em>, ICML 2024. [<a href="Publications/2024-ICML-Relation.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4893,7 +4895,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Sept. 25, 2024. Number of visitors since March 1, 2010:     
+was last updated on Sept. 28, 2024. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
