--- a/index.html
+++ b/index.html
@@ -2096,23 +2096,24 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Distinguished Member, AAAI Senior Member (only 5 approved in 2023), CCF/CAA/CAAI Distinguished Member
 <o:p></o:p></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Awards:</u></b></strong></p>
-<p>1. 林宙辰、方聪、李欢、刘宏、杨一博，深度学习网络设计与优化算法，2023年度中国人工智能学会吴文俊科学技术奖自然科学一等奖。[Zhouchen Lin, Cong Fang, Huan Li, Hong Liu,Yibo Yang, First prize of the CAAI Natural Science Award (2023), by the work &quot;Network Design and Training Algorithms for Deep Learning&quot;.]</p>
-<p>2. 北京大学2023年度中国工商银行奖教金优秀教师奖。[Peking University ICBC Excellent Teacher Award (2023). ] </p>
-<p>3. 刘日升、张淼、林宙辰、樊鑫、罗钟铉，全时复杂环境感知的多域协同视觉计算理论与方法，中国图象图形学学会科学技术奖自然科学二等奖，2023年。</p>
-<p>4. 刘宏、刘梦源、李夏、林宙辰、丁润伟，基于多元可信架构的机器人视觉通用特征学习机制，深圳市科学技术奖自然科学一等奖，2023年。</p>
-<p>5. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
-<p>6. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
-<p>7. 林宙辰、刘光灿、尹明、俞勇，高维复杂数据的低秩模型理论与方法，2020年度中国计算机学会科学技术奖自然科学一等奖。[Zhouchen Lin, Guangcan Liu, Ming Yin, and Yong Yu, First prize of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.]</p>
-<p>8. Distinguished Speaker of CCF (2020). </p>
-<p>9. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
+<p>1. 林宙辰、王奕森、吴建龙、夏树涛，非完备情况下的表示学习理论与方法，2024年度中国自动化学会科学技术奖自然科学一等奖。[Zhouchen Lin, Yisen Wang, Jianlong Wu, Shutao Xia, First Prize of the CAA Natural Science Award (2024), by the work &quot;Theories and Methods of Representation Learning under Incomplete Conditions&quot;.]</p>
+<p>2. 林宙辰、方聪、李欢、刘宏、杨一博，深度学习网络设计与优化算法，2023年度中国人工智能学会吴文俊科学技术奖自然科学一等奖。[Zhouchen Lin, Cong Fang, Huan Li, Hong Liu,Yibo Yang, First prize of the CAAI Natural Science Award (2023), by the work &quot;Network Design and Training Algorithms for Deep Learning&quot;.]</p>
+<p>3. 北京大学2023年度中国工商银行奖教金优秀教师奖。[Peking University ICBC Excellent Teacher Award (2023). ] </p>
+<p>4. 刘日升、张淼、林宙辰、樊鑫、罗钟铉，全时复杂环境感知的多域协同视觉计算理论与方法，中国图象图形学学会科学技术奖自然科学二等奖，2023年。</p>
+<p>5. 刘宏、刘梦源、李夏、林宙辰、丁润伟，基于多元可信架构的机器人视觉通用特征学习机制，深圳市科学技术奖自然科学一等奖，2023年。</p>
+<p>6. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
+<p>7. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
+<p>8. 林宙辰、刘光灿、尹明、俞勇，高维复杂数据的低秩模型理论与方法，2020年度中国计算机学会科学技术奖自然科学一等奖。[Zhouchen Lin, Guangcan Liu, Ming Yin, and Yong Yu, First prize of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.]</p>
+<p>9. Distinguished Speaker of CCF (2020). </p>
+<p>10. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
   Graphics (2018 and 2019). </p>
-<p>10. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
-<p>11.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
-<p>12. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
-<p>13. Okawa Research Grant (2016) </p>
-<p>14. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
+<p>11. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>12.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
+<p>13. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
+<p>14. Okawa Research Grant (2016) </p>
+<p>15. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
 Visual Recognition Challenge (ILSVRC)  Scene Classification Task</a> (2015)</p>
-<p>15. Microsoft SPOT Award (2007)  </p>
+<p>16. Microsoft SPOT Award (2007)  </p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Courses:</u></b></strong></p>
 <p>1. Fundamentals of Data Analysis </p>
 <p>2. Manifold Learning and Sparse Representation</p>
@@ -2155,7 +2156,7 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>21. Zhengyang Shen (2020年度石青云院士优秀论文奖), Ph.D. in 2022. </p>
 <p>22. Feng Jiang, Qiuhao Wang, Zhiheng Kong, and Nan Ke, Master in 2022. </p>
 <p>23. Zenan Ling (now Assistant Professor at Huazhong University of Science and Technology), PostDoc in 2022. </p>
-<p>24. Xingyu Xie (<strong>Peking University  Outstanding Ph.D. Dissertation Award</strong>, 2019年度石青云院士优秀论文奖),  Mingjie Li (<strong>Peking University Excellent Graduate Student</strong>), Yifei Wang (co-supervise, <strong>CAAI 2023 Outstanding Ph.D. Dissertation Award Honorable Mention</strong>) and Qi Chen (co-supervise), Ph.D. in 2023. </p>
+<p>24. Xingyu Xie (<strong>Peking University  Outstanding Ph.D. Dissertation Award</strong>, 2019年度石青云院士优秀论文奖，<strong>CSIG 2024</strong> <strong>Outstanding Ph.D. Dissertation Award</strong>),  Mingjie Li (<strong>Peking University Excellent Graduate Student, CAA 2024</strong> <strong>Outstanding Ph.D. Dissertation Award</strong>), Yifei Wang (co-supervise, <strong>CAAI 2023 Outstanding Ph.D. Dissertation Award Honorable Mention</strong>) and Qi Chen (co-supervise), Ph.D. in 2023. </p>
 <p>25. Dapeng Xu, Shihong Ding, Zhuping Gong, and Zongpeng Zhang (co-supervise), Master in 2023. </p>
 <p>26. Long Yang, Postdoc in 2024. </p>
 <p>27. Lingshen He and Qingyan Meng, Ph.D. in 2024.</p>
